--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "jquery": "2.1.4",
     "modernizer": "~2.8.2",
-    "normalize.css": "~3.0.3"
+    "normalize.css": "~3.0.3",
+    "bPopup": "bpopup#~0.11.0",
+    "jquery.easing": "~1.3.1"
   }
 }
