--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,8 @@
     "modernizer": "~2.8.2",
     "normalize.css": "~3.0.3",
     "bPopup": "bpopup#~0.11.0",
-    "jquery.easing": "~1.3.1"
+    "jquery.easing": "~1.3.1",
+    "qtip2": "~2.2.1",
+    "jquery.placeholder": "~0.2.4"
   }
 }
