--- a/package.json
+++ b/package.json
@@ -3,6 +3,15 @@
   "version": "1.0.0",
   "devDependencies": {
     "browser-sync": "^2.9.6",
-    "gulp": "^3.9.0"
+    "gulp": "^3.9.0",
+    "del": "^2.0.2",
+    "gulp-filter": "^3.0.1",
+    "gulp-if": "^2.0.0",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-size": "^2.0.0",
+    "gulp-uglify": "^1.4.2",
+    "gulp-useref": "^1.3.0",
+    "wiredep": "^2.2.2"
   }
 }
